# swagger/swagger.json
@@ -283,6 +283,46 @@
                 }
             }
         },
+        "/proxy/changeClass": {
+            "put": {
+                "tags": [
+                    "proxy"
+                ],
+                "operationId": "ProxyController.change proxy class"
+            }
+        },
+        "/proxy/getProxyCount": {
+            "get": {
+                "tags": [
+                    "proxy"
+                ],
+                "operationId": "ProxyController.get kinds of proxy counts"
+            }
+        },
+        "/proxy/searchId": {
+            "get": {
+                "tags": [
+                    "proxy"
+                ],
+                "operationId": "ProxyController.search which id proxy"
+            }
+        },
+        "/proxy/searchOne": {
+            "get": {
+                "tags": [
+                    "proxy"
+                ],
+                "operationId": "ProxyController.search one player(all proxy)"
+            }
+        },
+        "/proxy/showProxy": {
+            "get": {
+                "tags": [
+                    "proxy"
+                ],
+                "operationId": "ProxyController.page show which proxy class you want"
+            }
+        },
         "/testUser/": {
             "post": {
                 "tags": [
@@ -597,6 +637,10 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "has_cards_count": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "id": {
                     "$ref": "#/definitions/bson.ObjectId"
                 },
@@ -608,6 +652,10 @@
                     "format": "int64"
                 },
                 "is_proxy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "join_proxy_time": {
                     "type": "integer",
                     "format": "int64"
                 },
